--- a/README
+++ b/README
@@ -2,7 +2,8 @@ NAME
     SHARYANTO::Dist::Util - Dist-related utilities
 
 VERSION
-    version 0.02
+    This document describes version 0.03 of SHARYANTO::Dist::Util (from Perl
+    distribution SHARYANTO-Dist-Util), released on 2014-07-02.
 
 SYNOPSIS
      use SHARYANTO::Dist::Util qw(
@@ -11,7 +12,7 @@ SYNOPSIS
      );
 
      say packlist_for("Text::ANSITable"); # sample output: /home/steven/perl5/perlbrew/perls/perl-5.18.2/lib/site_perl/5.18.2/x86_64-linux/auto/Text/ANSITable/.packlist
-     my @mods = list_dist_modules("Text::ANSITable"); # -> ()
+     my @mods = list_dist_modules("Text::ANSITable"); # -> ("Text::ANSITable", "Text::ANSITable::BorderStyle::Default", "Text::ANSITable::ColorTheme::Default")
 
 DESCRIPTION
 FUNCTIONS
@@ -25,9 +26,9 @@ FUNCTIONS
 
   list_dist_modules($mod) => LIST
     Given installed module name $mod (which must be the name of the main
-    module of its distribution), list all the modules. This is done by first
-    finding the ".packlist" file, then look at all the ".pm" files listed in
-    the packlist.
+    module of its distribution), list all the modules in the distribution.
+    This is done by first finding the ".packlist" file, then look at all the
+    ".pm" files listed in the packlist.
 
     Will return empty list if fails to get the packlist.
 
