--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for SHARYANTO-Dist-Util
 
+0.04    2014-11-20 (PERLANCAR)
+
+	- Accept Foo-Bar as well as Foo::Bar.
+
+
 0.03    2014-07-02 (SHARYANTO)
 
         - No functional changes.
