--- a/README
+++ b/README
@@ -2,8 +2,8 @@ NAME
     SHARYANTO::Dist::Util - Dist-related utilities
 
 VERSION
-    This document describes version 0.03 of SHARYANTO::Dist::Util (from Perl
-    distribution SHARYANTO-Dist-Util), released on 2014-07-02.
+    This document describes version 0.04 of SHARYANTO::Dist::Util (from Perl
+    distribution SHARYANTO-Dist-Util), released on 2014-11-20.
 
 SYNOPSIS
      use SHARYANTO::Dist::Util qw(
@@ -51,10 +51,10 @@ BUGS
     to an existing test-file that illustrates the bug or desired feature.
 
 AUTHOR
-    Steven Haryanto <stevenharyanto@gmail.com>
+    perlancar <perlancar@cpan.org>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2014 by Steven Haryanto.
+    This software is copyright (c) 2014 by perlancar@cpan.org.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
